--- a/Client/LegumEz-Client/src/app/app.component.html
+++ b/Client/LegumEz-Client/src/app/app.component.html
@@ -1,8 +1,3 @@
-<main class="main">
-  <div class="content">
-    <a routerLink="/meteo">Meteo</a>
-    <a routerLink="/plantation">Plantation</a>
-  </div>
-</main>
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
