--- a/Client/LegumEz-Client/src/app/plantation/plantation.component.html
+++ b/Client/LegumEz-Client/src/app/plantation/plantation.component.html
@@ -1,5 +1,23 @@
-<p>Plantations disponibles</p>
+<div class="flex justify-center">
 
-@for (culture of possibleCultures; track culture.id) {
-    <p>{{ culture.nom }}</p>
-  }
+    <div class="flex justify-center basis-1/2">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-green-700 mt-16">Faire pousser chez soi !</h1>
+            <p class="text-1xl  text-green-700 mt-2">Sélectionnez une culture et votre localisation </p>
+
+            <app-searchbox (queryChangedEvent)="selectedCultureName = $event" [allSuggestions]="cultureSuggestions" placeHolder="Tomato, carott ..." class="mt-8"></app-searchbox>
+
+            <div class="relative w-full max-w-xs mt-6">
+                <label class="text-gray-400 ml-2">Localisation</label>
+                <input class="my_input" placeholder="Paris, Lyon ..." [(ngModel)]="localisation"/>
+            </div>
+
+            <div class="relative w-full max-w-xs mt-6 flex justify-center">
+                <button class="focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        (click)="getCultureInformations()">
+                    Rechercher
+                </button>
+            </div>
+        </div>
+    </div>
+</div>  
