--- a/Client/LegumEz-Client/src/styles.css
+++ b/Client/LegumEz-Client/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .my_input {
+      @apply border border-gray-300 rounded-md w-full py-2 px-4 leading-tight focus:outline-none focus:border-green-500;
+    }
+  }
